--- a/src/app/dashboard/dashboard-components/sales-overview/sales-overview.component.html
+++ b/src/app/dashboard/dashboard-components/sales-overview/sales-overview.component.html
@@ -3,18 +3,18 @@
     <div class="d-flex flex-wrap">
       <div>
         <mat-card-title>Sales Overview</mat-card-title>
-        <mat-card-subtitle>Ample Admin Vs Material Admin</mat-card-subtitle>
+        <mat-card-subtitle>2022 Vs 2023</mat-card-subtitle>
       </div>
       <div class="ml-auto">
         <ul class="list-inline">
           <li>
             <h6 class="text-success m-0">
-              <i class="mdi mdi-checkbox-blank-circle font-10 m-r-10"></i>Ample
+              <i class="mdi mdi-checkbox-blank-circle font-10 m-r-10"></i>2022
             </h6>
           </li>
           <li>
             <h6 class="text-info m-0">
-              <i class="mdi mdi-checkbox-blank-circle font-10 m-r-10"></i>Pixel
+              <i class="mdi mdi-checkbox-blank-circle font-10 m-r-10"></i>2023
             </h6>
           </li>
         </ul>
