--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,56 @@
+<div  style="margin: 16px;">
+  <mat-carousel
+    timings="250ms ease-in"
+    [autoplay]="true"
+    interval="10000"
+    color="accent"
+    maxWidth="auto"
+    proportion="25"
+    slides="5"
+    [loop]="true"
+    [hideArrows]="false"
+    [hideIndicators]="false"
+    [useKeyboard]="true"
+    [useMouseWheel]="false"
+    orientation="ltr"
+  >
+    <mat-carousel-slide
+      #matCarouselSlide
+      *ngFor="let slide of slides; let i = index"
+      [image]="slide.image"
+      overlayColor="#00000040"
+      [hideOverlay]="false"
+    ></mat-carousel-slide>
+  </mat-carousel>
+</div>
 <!-- ============================================================== -->
-<!-- Image and chart -->
+<!-- Colored Card row-->
 <!-- ============================================================== -->
 <div fxLayout="row wrap">
+  <div fxFlex.gt-sm="33.33%" fxFlex="100">
+    <app-circular></app-circular>
+  </div>
+  <div fxFlex.gt-sm="33.33%" fxFlex="100">
+    <app-stock-price></app-stock-price>
+  </div>
+  <div fxFlex.gt-sm="33.33%" fxFlex="100">
+    <app-gold-price></app-gold-price>
+  </div>
+</div>
+<!-- ============================================================== -->
+<!-- News -->
+<!-- ============================================================== -->
+<div fxLayout="row wrap">
+  <div style="width: 100%;margin-top: -35px;">
+    <div style=" float: right; margin-top: 30px;margin-right: 15px;">
+      <button mat-icon-button color="primary">
+        <mat-icon aria-label="Example icon-button with a heart icon">arrow_back_ios</mat-icon>
+       </button>
+       <button mat-icon-button color="primary">
+         <mat-icon aria-label="Example icon-button with a heart icon">arrow_forward_ios</mat-icon>
+       </button>
+     </div>
+   </div>
   <!-- Column-->
   <div fxFlex.gt-lg="25" fxFlex.gt-md="33" fxFlex.gt-xs="100" fxFlex="100">
       <mat-card class="oh">
@@ -58,106 +107,46 @@
         </mat-card-content>
     </mat-card>
 </div>
-<div style="width: 100%;margin-top: -35px;">
- <div style=" float: right; margin-bottom: 15px;margin-right: 15px;">
-   <button mat-icon-button color="primary">
-     <mat-icon aria-label="Example icon-button with a heart icon">arrow_back_ios</mat-icon>
-    </button>
-    <button mat-icon-button color="primary">
-      <mat-icon aria-label="Example icon-button with a heart icon">arrow_forward_ios</mat-icon>
-    </button>
-  </div>
-</div>
-</div>
 
+</div>
 
 <!-- ============================================================== -->
-<!-- Colored Card row-->
+<!-- Chart boxes -->
 <!-- ============================================================== -->
 <div fxLayout="row wrap">
-  <div fxFlex.gt-sm="33.33%" fxFlex="100">
-      <mat-card>
-          <mat-card-header class="bg-primary text-white">
-              <mat-card-title>
-                <mat-icon class="card-icon">calendar_month</mat-icon> Upcoming Events</mat-card-title>
-          </mat-card-header>
-          <mat-nav-list>
-       
-              <mat-list-item (click)="onSelect(message)" [class.active]="message === selectedMessage"
-                *ngFor="let message of messagesLatest">
-                
-                <h3 matLine> {{message.title}} </h3>
-                <p matLine class="text-muted"> {{message.subject}} </p>
-                <p matLine class="text-muted"> {{message.date}} </p>
-              </mat-list-item>
-            </mat-nav-list>
-           
-      </mat-card>
+  <!-- column -->
+  <div fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
+    <app-event></app-event>
   </div>
-  <div fxFlex.gt-sm="33.33%" fxFlex="100">
-      <mat-card>
-          <mat-card-header class="bg-info text-white">
-              <mat-card-title><mat-icon class="card-icon">trending_up</mat-icon> KBL Stocks</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <b>NSE</b>
-            <p>₹129.70 0.39% +0.50 Today</p>                
-            <b>BOM</b>
-            <p>₹129.85 0.40% +0.50 Today</p>  
-            <b>₹ 82.0565</b>
-          <p>USD / INR </p>    
-          </mat-card-content>
-      </mat-card>
-  </div>
-  <div fxFlex.gt-sm="33.33%" fxFlex="100">
-    <mat-card>
-        <mat-card-header class="bg-danger text-white">
-            <mat-card-title><mat-icon class="card-icon">shield</mat-icon>Gold price</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <b>₹ 62,290.00</b>
-          <p>24K Gold / 10gm          </p>                
-          <br>
-          <b>₹ 61,300.00</b>
-          <p>22K Gold / 10gm          </p> 
-          <br>
-          <br>
-          
-        </mat-card-content>
-    </mat-card>
 </div>
-   
-</div>
+
+
+
 
 
 <!-- ============================================================== -->
-<!-- Simple four boxes Row -->
+<!-- Chart boxes -->
 <!-- ============================================================== -->
 <div fxLayout="row wrap">
+  <!-- column -->
+  <div fxFlex.gt-md="33.33" fxFlex.gt-xs="100" fxFlex="100">
+      <div fxLayout="row wrap">
+          <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+             <app-stock></app-stock>
+          </div>
+      </div>
+      <div fxLayout="row wrap">
+          <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+            <app-gold></app-gold>
+          </div>
+      </div>
+  </div>
+  <!-- column -->
   <!-- column -->
   <div fxFlex.gt-lg="65" fxFlex.gt-md="65" fxFlex.gt-xs="100" fxFlex="100">
     <app-sales-overview></app-sales-overview>
   </div>
   <!-- column -->
-  <!-- column -->
-  <div fxFlex.gt-lg="35" fxFlex.gt-md="35" fxFlex.gt-xs="100" fxFlex="100">
-    <app-our-visiter></app-our-visiter>
-  </div>
-  <!-- column -->
-</div>
 
-<!-- ============================================================== -->
-<!-- Image Card row-->
-<!-- ============================================================== -->
-<div fxLayout="row wrap">
-  <!-- Card column -->
-  <div fxFlex.gt-lg="25" fxFlex.gt-md="40" fxFlex.gt-xs="100" fxFlex="100">
-    <app-profile></app-profile>
-    <app-contacts></app-contacts>
-  </div>
-  <!-- Card column -->
-  <!-- Card column -->
-  <div fxFlex.gt-lg="75" fxFlex.gt-md="60" fxFlex.gt-xs="100" fxFlex="100">
-    <app-activity-timeline></app-activity-timeline>
-  </div>
+  <!-- column -->
 </div>
