--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -38,7 +38,7 @@
         <!-- ============================================================== -->
         <!-- app header component - style you can find in header.scss / header.component.ts-->
         <!-- ============================================================== -->
-        <app-header></app-header>
+        <app-header [sidenav]="snav"></app-header>
     </mat-toolbar>
     <!-- <mat-toolbar color="theme">
         <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
