--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -11,7 +11,7 @@
 <button mat-button color="Basic" (click)="openNewsPage()">
     <mat-icon aria-label="Example icon-button with a heart icon">feed</mat-icon> News
 </button>
-<button mat-button color="Basic" >
+<button mat-button color="Basic" (click)="sidenav.toggle()">
     <mat-icon aria-label="Example icon-button with a heart icon">link</mat-icon> Popular links
 </button>
  
