--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -3,16 +3,20 @@
 <!-- Profile - style you can find in header.scss -->
 <!-- ============================================================== -->
 <button mat-button color="Basic" (click)="openAppsPage()">
-    <mat-icon aria-label="Example icon-button with a heart icon">window</mat-icon> Apps
+    <mat-icon aria-label="Example icon-button with a heart icon">window</mat-icon> 
+    <span fxShow="false" fxShow.gt-xs>Apps</span>    
 </button>
 <button mat-button color="Basic" (click)="openPeoplePage()">
-    <mat-icon aria-label="Example icon-button with a heart icon">group</mat-icon> People
+    <mat-icon aria-label="Example icon-button with a heart icon">group</mat-icon> 
+    <span fxShow="false" fxShow.gt-xs>People</span>    
 </button>
 <button mat-button color="Basic" (click)="openNewsPage()">
-    <mat-icon aria-label="Example icon-button with a heart icon">feed</mat-icon> News
+    <mat-icon aria-label="Example icon-button with a heart icon">feed</mat-icon> 
+    <span fxShow="false" fxShow.gt-xs>News</span>    
 </button>
 <button mat-button color="Basic" (click)="sidenav.toggle()">
-    <mat-icon aria-label="Example icon-button with a heart icon">link</mat-icon> Popular links
+    <mat-icon aria-label="Example icon-button with a heart icon">link</mat-icon> 
+    <span fxShow="false" fxShow.gt-xs>Popular links</span>
 </button>
  
 <button [matMenuTriggerFor]="profile" mat-icon-button class="m-r-5"> <img src="assets/images/users/1.jpg" alt="user" class="profile-pic"> </button>
