--- a/src/app/material-component/news/news.component.html
+++ b/src/app/material-component/news/news.component.html
@@ -19,7 +19,7 @@
                     <mat-icon>view_list</mat-icon>
                   </button>
                 <div fxFlex>
-                  <div class="font-14"> About 1,090 results</div>
+                  <div class="font-14" fxShow="false" fxShow.gt-xs> About 1,090 results</div>
                 </div>
                  
                  
