--- a/src/app/material-component/people/people.component.html
+++ b/src/app/material-component/people/people.component.html
@@ -18,7 +18,7 @@
                     <mat-icon>view_list</mat-icon>
                   </button>
                 <div fxFlex>
-                  <div class="font-14"> About 11,090 results</div>
+                  <div class="font-14" fxShow="false" fxShow.gt-xs> About 11,090 results</div>
                 </div>
                  
                  
