--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -17,6 +17,7 @@ $headingfont: 'Poppins', sans-serif;
 $primary: mat-palette($mat-purple, 400);
 $accent: mat-palette($mat-indigo, 500);
 $warn: mat-palette($mat-pink, 500);
+$blue: mat-palette($mat-blue, 500);
 $theme: mat-light-theme($primary, $accent, $warn);
 $background: map-get($theme, background);
 $foreground: map-get($theme, foreground);
