--- a/src/app/layouts/circular/circular.component.html
+++ b/src/app/layouts/circular/circular.component.html
@@ -31,9 +31,9 @@
         <!-- sidebar toggle -->
         <!-- ============================================================== -->
         
-        <!-- <button mat-icon-button (click)="snav.toggle()" value="sidebarclosed">
-            <mat-icon>menu</mat-icon>
-        </button> -->
+        <button mat-icon-button (click)="openDashboard()" value="sidebarclosed">
+            <mat-icon>home</mat-icon>
+        </button>
         <span fxFlex></span>
         <!-- ============================================================== -->
         <!-- app header component - style you can find in header.scss / header.component.ts-->
