--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -11,20 +11,21 @@
         <!-- ============================================================== -->
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-                <!-- Logo icon --><b>
+                <!-- Logo icon --> 
+                    <span style="color:#fff">KBL DC</span>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo">
+                    <!-- <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo"> -->
                     <!-- Light Logo icon -->
-                    <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo">
-                </b>
+                    <!-- <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo"> -->
                 <!--End Logo icon -->
                 <!-- Logo text -->
                 <span fxShow="false" fxShow.gt-xs>
+                    <!-- <span style="color:#fff">KBL DC</span> -->
                  <!-- dark Logo text -->
-                 <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo">
+                 <!-- <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo"> -->
                  <!-- Light Logo text -->    
-                 <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage">
+                 <!-- <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage"> -->
                 </span> </a>
         </div>
         <!-- ============================================================== -->
