--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -150,3 +150,22 @@
 
   <!-- column -->
 </div>
+
+<!-- ============================================================== -->
+<!-- Chart boxes -->
+<!-- ============================================================== -->
+<div fxLayout="row wrap">
+  <!-- column -->
+  <div fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
+    <app-quiz></app-quiz>
+  </div>
+</div>
+<!-- ============================================================== -->
+<!-- Chart boxes -->
+<!-- ============================================================== -->
+<div fxLayout="row wrap">
+  <!-- column -->
+  <div fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
+    <app-holiday></app-holiday>
+  </div>
+</div>
