--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -169,3 +169,12 @@
     <app-holiday></app-holiday>
   </div>
 </div>
+<!-- ============================================================== -->
+<!-- Chart boxes -->
+<!-- ============================================================== -->
+<div fxLayout="row wrap">
+  <!-- column -->
+  <div fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
+    <app-post></app-post>
+  </div>
+</div>
